Removed invalid assert in BMP loader code.

Task-number: QTBUG-24505

Change-Id: I2e369b6d92f072caadeda41125303856ddfabd48
Reviewed-by: aavit <qt_aavit@ovi.com>

cregit: c45146b48c66a18269d9b9907ddcf5394722ca83 https://github.com/qt/qtbase/commit/c45146b48c66a18269d9b9907ddcf5394722ca83